# android-things

./: .gitmodules  .travis.yml  LICENSE  README.md
gpio_toggle_speed/: README.md
gpio_toggle_speed/toggle_java/app/: build.gradle
gpio_toggle_speed/toggle_java/app/src/main/: AndroidManifest.xml
gpio_toggle_speed/toggle_java/app/src/main/res/values/: strings.xml
gpio_toggle_speed/toggle_native/app/: CMakeLists.txt  build.gradle
gpio_toggle_speed/toggle_native/app/src/main/: AndroidManifest.xml
gpio_toggle_speed/toggle_native/app/src/main/cpp/: toggle-native.cpp
gpio_toggle_speed/toggle_native/app/src/main/res/values/: strings.xml
hc05/: README.md
hc05/app/: build.gradle
hc05/app/src/main/: AndroidManifest.xml
hc05/app/src/main/java/com/github/mthu/hc05/: MainActivity.java
hc05/app/src/main/res/values/: strings.xml
hc05/gradle/wrapper/: gradle-wrapper.properties
hmc5883l/: README.md
hmc5883l/app/: build.gradle
hmc5883l/app/src/main/: AndroidManifest.xml
hmc5883l/app/src/main/res/values/: strings.xml
lm75-native/: README.md
lm75-native/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
lm75-native/app/src/main/: AndroidManifest.xml
lm75-native/app/src/main/cpp/: lm75-native.cpp  lm75.cpp  lm75.h
lm75-native/app/src/main/res/values/: strings.xml
lm75-native/gradle/wrapper/: gradle-wrapper.properties
lm75/app/: build.gradle
lm75/app/src/main/: AndroidManifest.xml
lm75/app/src/main/res/values/: strings.xml
max6675/: README.md
max6675/app/: build.gradle
max6675/app/src/main/: AndroidManifest.xml
max6675/app/src/main/res/values/: strings.xml
template-native/app/: CMakeLists.txt  build.gradle
template-native/app/src/main/: AndroidManifest.xml
template-native/app/src/main/cpp/: native-app.cpp
template-native/app/src/main/res/values/: strings.xml
template/app/: build.gradle
template/app/src/main/: AndroidManifest.xml
(+9 files in other folders)
